--- a/iteration-03/yoda.html
+++ b/iteration-03/yoda.html
@@ -7,7 +7,84 @@
     <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
-    <!-- fill this void -->
-    
+    <header>
+        <h1>Cuteness overload</h1>
+    </header>
+    <img src="assets/babyYoda.png" title="Baby Yoda" alt="Baby Yoda">
+    <h2>
+       Why Some People Want To Squeeze Baby Yoda 
+    </h2>
+    <p>It is just so cute I can not help myslef - <i>tutor</i>.</p>
+    <p>There <b>might be</b> a scientific explanation - <i>some random website</i>.</p>
+    <hr>
+    <p>Oh sorry to interupt my mighty tutor, please click here to go to my IS profile page <a href="https://is.muni.cz/auth/osoba/xsliva">magical link</a></p>
+    <hr>
+    <p>wish list</p>
+    <ul>
+        <li>light saber</li>
+        <li>more power</li>
+        <li>hehe</li>
+        <li>frog eggs</li>
+    </ul>
+
+    <hr>
+
+    <blockquote cite="https://en.wikiquote.org/wiki/pepa_z_depa">
+        If I ware to write an essay, I am sure it would be quoted somewhere on the web.<br> - Unknown tutor
+    </blockquote>
+
+    <hr>
+
+    <table>
+        <tr>
+            <th>Witch</th>
+            <th>Doctor</th>
+        </tr>
+        <tr>
+            <td>úúú</td>
+            <td>ííí</td>
+        </tr>
+        <tr>
+            <td>u</td>
+            <td>a</td>
+        </tr>
+        <tr>
+            <td colspan="2">ááááááááááááááááááááááááááááá</td>
+        </tr>
+    </table>
+    <p>In this block the symbol <kbd>á</kbd> appears <s>42</s> <mark>43</mark> times.</p>
+
+    <hr>
+
+    <p><i>This is voluntary questionare</i></p>
+
+    <form>
+        <p>
+            <label>Name</label>
+            <br>
+            <input type="text" name="name" placeholder="may the force be with you">
+        </p>
+        <p>
+            <label>Gender</label>
+            <br>
+            <input type="range" name="gender">
+        </p>
+        <p>
+            <label>Stance</label>
+            <br>
+            <input type="radio" id="sith" name="starwars">
+            <label for="sith">Sith</label> <br>
+            <input type="radio" id="jedi" name="starwars">
+            <label for="jedi">Jedi</label> <br>
+            <input type="radio" id="passfail" name="starwars" disabled>
+            <label for="passfail">Pass/Fail fan (disabled for now)</label>
+
+        </p>
+        <button type="submit">Send</button>
+    </form>
+    <footer>
+        &copy; 2022 511768
+    </footer>
+
 </body>
 </html>
