Fix: Strong instead of <b> element

--- a/iteration-03/yoda.html
+++ b/iteration-03/yoda.html
@@ -11,15 +11,18 @@
         <h1>Cuteness overload</h1>
     </header>
     <img src="assets/babyYoda.png" title="Baby Yoda" alt="Baby Yoda">
+    
     <h2>
        Why Some People Want To Squeeze Baby Yoda 
     </h2>
+
     <p>It is just so cute I can not help myslef - <i>tutor</i>.</p>
-    <p>There <b>might be</b> a scientific explanation - <i>some random website</i>.</p>
+    <p>There <strong>might be</strong> a scientific explanation - <i>some random website</i>.</p>
     <hr>
     <p>Oh sorry to interupt my mighty tutor, please click here to go to my IS profile page <a href="https://is.muni.cz/auth/osoba/xsliva">magical link</a></p>
     <hr>
     <p>wish list</p>
+
     <ul>
         <li>light saber</li>
         <li>more power</li>
@@ -52,6 +55,7 @@
             <td colspan="2">ááááááááááááááááááááááááááááá</td>
         </tr>
     </table>
+
     <p>In this block the symbol <kbd>á</kbd> appears <s>42</s> <mark>43</mark> times.</p>
 
     <hr>
@@ -82,6 +86,7 @@
         </p>
         <button type="submit">Send</button>
     </form>
+
     <footer>
         &copy; 2022 511768
     </footer>
