Feat: More lovely code

--- a/iteration-03/yoda.html
+++ b/iteration-03/yoda.html
@@ -77,9 +77,11 @@
             <label>Stance</label>
             <br>
             <input type="radio" id="sith" name="starwars">
-            <label for="sith">Sith</label> <br>
+            <label for="sith">Sith</label>
+            <br>
             <input type="radio" id="jedi" name="starwars">
-            <label for="jedi">Jedi</label> <br>
+            <label for="jedi">Jedi</label>
+            <br>
             <input type="radio" id="passfail" name="starwars" disabled>
             <label for="passfail">Pass/Fail fan (disabled for now)</label>
 
