Fix: Missclicked word repaired

--- a/iteration-03/yoda.html
+++ b/iteration-03/yoda.html
@@ -10,13 +10,14 @@
     <header>
         <h1>Cuteness overload</h1>
     </header>
+    
     <img src="assets/babyYoda.png" title="Baby Yoda" alt="Baby Yoda">
     
     <h2>
        Why Some People Want To Squeeze Baby Yoda 
     </h2>
 
-    <p>It is just so cute I can not help myslef - <i>tutor</i>.</p>
+    <p>It is just so cute I can not help myself - <i>tutor</i>.</p>
     <p>There <strong>might be</strong> a scientific explanation - <i>some random website</i>.</p>
     <hr>
     <p>Oh sorry to interupt my mighty tutor, please click here to go to my IS profile page <a href="https://is.muni.cz/auth/osoba/xsliva">magical link</a></p>
