Fix: Desktop version fixes

--- a/iteration-04/index.html
+++ b/iteration-04/index.html
@@ -29,7 +29,7 @@
               <div id="pshop" class="menu__item">Points Shop</div>
               <div id="news" class="menu__item">News</div>
               <div id="labs" class="menu__item">Labs</div>
-              <div id="searchbox" class="menu__item">
+              <div id="searchbox">
                   <div id="searchbox__item">search</div>
                   <i class="fa fa-search"></i>
               </div>
@@ -79,6 +79,9 @@
               </div>
           </div>
           <img src="assets/main_img.jpg" alt="Game Image 1" id="main__gta-car">
+          <div id="sign-in-frame">
+            <div id="sign-in">Sign in to add this item to your wishlist, follow it, or mark it as ignored</div>
+          </div>
       </div>
   </body>
 </html>
